[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/Etc/mechconcept.jpg" type="Texture" id=1]
[ext_resource path="res://Scripts/GameOverRoot.gd" type="Script" id=2]
[ext_resource path="res://Scripts/ContinueButton.gd" type="Script" id=3]
[ext_resource path="res://Fonts/BrokenFontTitle.tres" type="DynamicFont" id=4]
[ext_resource path="res://Themes/Menus.tres" type="Theme" id=5]

[node name="GameOverRoot" type="CanvasLayer"]
layer = 2
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 5 )

[node name="CenterContainer" type="CenterContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 317.0
margin_top = 30.0
margin_right = 667.0
margin_bottom = 530.0

[node name="BG" type="ColorRect" parent="Control/CenterContainer"]
margin_right = 350.0
margin_bottom = 500.0
rect_min_size = Vector2( 350, 500 )
color = Color( 1, 0, 0, 0.262745 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer"]
margin_left = 25.0
margin_top = 29.0
margin_right = 325.0
margin_bottom = 471.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 4
alignment = 1

[node name="PauseText" type="Label" parent="Control/CenterContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 4 )
text = "Game Over"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CenterContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 300.0
margin_bottom = 36.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 300.0
margin_bottom = 138.0
size_flags_horizontal = 5
size_flags_vertical = 5

[node name="EmptyLabel" type="Label" parent="Control/CenterContainer/VBoxContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 14.0

[node name="ContinueButton" type="Button" parent="Control/CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 300.0
margin_bottom = 38.0
rect_min_size = Vector2( 75, 20 )
size_flags_horizontal = 5
text = "Restart"
script = ExtResource( 3 )

[node name="EmptyLabel2" type="Label" parent="Control/CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 300.0
margin_bottom = 56.0

[node name="SaveAndQuitButton" type="Button" parent="Control/CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 300.0
margin_bottom = 80.0
rect_min_size = Vector2( 75, 20 )
size_flags_horizontal = 5
text = "Quit"

[node name="EmptyLabel3" type="Label" parent="Control/CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 300.0
margin_bottom = 98.0

[node name="CenterContainer2" type="CenterContainer" parent="Control/CenterContainer/VBoxContainer"]
margin_top = 142.0
margin_right = 300.0
margin_bottom = 442.0
size_flags_horizontal = 3

[node name="Characters" type="TextureRect" parent="Control/CenterContainer/VBoxContainer/CenterContainer2"]
margin_right = 300.0
margin_bottom = 300.0
rect_min_size = Vector2( 300, 300 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="focus_entered" from="Control/CenterContainer/VBoxContainer/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_focus_entered"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/VBoxContainer/ContinueButton" to="." method="_on_Button_pressed"]
[connection signal="focus_entered" from="Control/CenterContainer/VBoxContainer/VBoxContainer/SaveAndQuitButton" to="." method="_on_SaveAndQuitButton_focus_entered"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/VBoxContainer/SaveAndQuitButton" to="." method="_on_Button2_pressed"]
